--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -6,15 +6,37 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
    <children>
+      <GridPane prefHeight="720.0" prefWidth="1290.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="634.0" minWidth="10.0" prefWidth="56.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1260.0" minWidth="10.0" prefWidth="325.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1260.0" minWidth="0.0" prefWidth="69.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1260.0" minWidth="10.0" prefWidth="344.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1260.0" minWidth="10.0" prefWidth="500.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="252.0" minHeight="10.0" prefHeight="242.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="235.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="235.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="235.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="330.0" minHeight="10.0" prefHeight="297.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+      <Rectangle height="72.0" layoutX="53.0" layoutY="227.0" styleClass="rounded-rectangle" width="1173.0" />
+      <Rectangle height="72.0" layoutX="54.0" layoutY="332.0" styleClass="rounded-rectangle" width="1173.0" />
       <!--header box-->
       <Rectangle id="header" arcHeight="5.0" arcWidth="5.0" height="60.0" width="1280.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 
       <!--heading-->
-      <Label styleClass="tool-name" layoutX="557.0" layoutY="6.0" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="6.0">
+      <Label layoutX="515.0" layoutY="8.0" styleClass="tool-name" text="Multigrading-Tool" textAlignment="CENTER" AnchorPane.topAnchor="8.0">
       </Label>
 
       <!--name of tables-->
@@ -24,7 +46,7 @@
       </Label>
 
       <!--file upload button-->
-      <Button contentDisplay="CENTER" layoutX="446.0" layoutY="335.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER" AnchorPane.leftAnchor="446.0" AnchorPane.topAnchor="335.0">
+      <Button contentDisplay="CENTER" layoutX="446.0" layoutY="344.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER" AnchorPane.leftAnchor="446.0" AnchorPane.topAnchor="344.0">
       </Button>
       <Button contentDisplay="CENTER" layoutX="446.0" layoutY="239.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="file-upload-button" text="Datei hochladen" textAlignment="CENTER">
       </Button>
@@ -41,11 +63,11 @@
       </ImageView>
 
       <!--name of uploaded files-->
-      <Label layoutX="793.0" layoutY="249.0" styleClass="file-output" text="Matrikeltabelle.xlsx" />
-      <Label layoutX="793.0" layoutY="354.0" styleClass="file-output" text="Prüfungsergebnistabelle.xlsx" />
+      <Label layoutX="793.0" layoutY="247.0" styleClass="file-output" text="Matrikeltabelle.xlsx" />
+      <Label layoutX="793.0" layoutY="350.0" styleClass="file-output" text="Prüfungsergebnistabelle.xlsx" />
 
       <!--button to call out usage instruction of tool-->
-      <Button fx:id="instruction"  layoutX="1132.0" layoutY="75.0" mnemonicParsing="false" onAction="#openPdf">
+      <Button fx:id="instruction" layoutX="1132.0" layoutY="75.0" mnemonicParsing="false" onAction="#openPdf">
          <graphic>
             <ImageView fitHeight="80" fitWidth="80" pickOnBounds="true" preserveRatio="true">
                <Image url="@images/icon-instruction.png" />
@@ -57,49 +79,41 @@
       </Button>
 
       <!--button to call out preview of Matrikeltabelle-->
-      <Button fx:id="previewMatrikel" styleClass="miniIcons" onAction="#showPreviewMatrikel" layoutX="1114" layoutY="245.0" mnemonicParsing="false">
-         <graphic>
-            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/icon-eye.png" />
-            </ImageView>
-         </graphic>
+      <Button fx:id="previewMatrikel" layoutX="1114" layoutY="245.0" mnemonicParsing="false" onAction="#showPreviewMatrikel" styleClass="miniIcons">
          <tooltip>
             <Tooltip styleClass="tooltip" text="Hier geht's zur Vorschau der gewählten Tabelle" />
          </tooltip>
       </Button>
 
       <!--button to call out preview of Notentabelle-->
-      <Button fx:id="previewExam" styleClass="miniIcons" onAction="#showPreviewExam" layoutX="1114" layoutY="350.0" mnemonicParsing="false">
-         <graphic>
-            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/icon-eye.png" />
-            </ImageView>
-         </graphic>
+      <Button fx:id="previewExam" layoutX="1114" layoutY="350.0" mnemonicParsing="false" onAction="#showPreviewExam" styleClass="miniIcons">
          <tooltip>
-            <Tooltip styleClass="tooltip" text="Hier geht's zur Vorschau der gewählten Tabelle"/>
+            <Tooltip styleClass="tooltip" text="Hier geht's zur Vorschau der gewählten Tabelle" />
          </tooltip>
       </Button>
 
       <!--info-icons to show the tool tips-->
-      <Button fx:id="infoMatrikel" styleClass="miniIcons" layoutX="60" layoutY="245.0" mnemonicParsing="false">
-         <graphic>
-            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/icon-info.png" />
-            </ImageView>
-         </graphic>
+      <Button fx:id="infoMatrikel" layoutX="60" layoutY="245.0" mnemonicParsing="false" styleClass="miniIcons">
          <tooltip>
             <Tooltip styleClass="tooltip" text="Tabelle mit Matrikelnummer und Namen" />
          </tooltip>
       </Button>
-      <Button fx:id="infoExam" styleClass="miniIcons" layoutX="60" layoutY="350.0" mnemonicParsing="false">
-         <graphic>
-            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/icon-info.png" />
-            </ImageView>
-         </graphic>
+      <Button fx:id="infoExam" layoutX="60" layoutY="350.0" mnemonicParsing="false" styleClass="miniIcons">
          <tooltip>
             <Tooltip styleClass="tooltip" text="Tabelle mit Noten(punkten)" />
          </tooltip>
       </Button>
+      <ImageView fitHeight="35" fitWidth="35" layoutX="70.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@images/icon-info.png" />
+      </ImageView>
+      <ImageView fitHeight="35" fitWidth="35" layoutX="70.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@images/icon-info.png" />
+      </ImageView>
+      <ImageView fitHeight="35" fitWidth="35" layoutX="1120.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@images/icon-eye.png" />
+      </ImageView>
+      <ImageView fitHeight="35" fitWidth="35" layoutX="1120.0" layoutY="347.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@images/icon-eye.png" />
+      </ImageView>
         </children>
 </AnchorPane>
