--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="290.0" prefWidth="288.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.LogIn">
+<AnchorPane prefHeight="290.0" prefWidth="288.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
     <children>
         <GridPane layoutX="7.0" layoutY="-14.0" prefHeight="290.0" prefWidth="521.0">
             <columnConstraints>
@@ -36,16 +36,16 @@
             <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
             </rowConstraints>
          <children>
-            <Button id="anmelden-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <Button id="login-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" onAction="#showMainPage" GridPane.columnIndex="7" GridPane.rowIndex="6" />
              <Rectangle height="70.0" styleClass="rounded-rectangle" width="495.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Rectangle height="69.0" styleClass="rounded-rectangle" width="493.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-             <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="178.0" styleClass="abbrechen-button" text="Abbrechen" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="6">
+             <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="178.0" styleClass="cancel-button" text="Abbrechen" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="6">
              </Button>
-              <Label prefHeight="35.0" prefWidth="174.0" styleClass="tableNameForLogin" text="Benutzername:" GridPane.columnIndex="3" GridPane.rowIndex="2">
+              <Label prefHeight="35.0" prefWidth="174.0" styleClass="labelNameForLogin" text="Benutzername:" GridPane.columnIndex="3" GridPane.rowIndex="2">
 
               </Label>
-              <Label prefHeight="35.0" prefWidth="139.0" styleClass="tableNameForLogin" text="Passwort:" GridPane.columnIndex="3" GridPane.rowIndex="4">
+              <Label prefHeight="35.0" prefWidth="139.0" styleClass="labelNameForLogin" text="Passwort:" GridPane.columnIndex="3" GridPane.rowIndex="4">
                 
               </Label>
             <TextArea minWidth="-Infinity" prefHeight="64.0" prefWidth="294.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
